# redundant-topology

./: .gitignore  README.md  example.py  pyproject.toml
dwdm_optimizer/: __init__.py  dijkstra.py  optimizer.py
redundant_topology/: __init__.py  optimizer.py
tests/: test_dijkstra.py  test_optimizer.py
