[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dwdm-network-optimizer"
version = "1.0.0"
description = "Heuristic link minimization for redundant DWDM optical network topologies"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["dwdm", "optical-network", "graph", "dijkstra", "network-topology", "heuristic"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["dwdm_optimizer"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
