[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "redundant-topology"
version = "2.0.0"
description = "Heuristic designer for minimal, redundant network topologies on any weighted graph"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["graph", "dijkstra", "network-topology", "survivable-network", "redundancy", "heuristic"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["redundant_topology"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
